# SunsetGlow

./: .gitmodules  CMakeLists.txt  Hmacro.py  Makefile  README.md  compute-responser.cpp  compute-server.cpp  config.txt  doc.txt  example.cpp  hdfs_test.cpp  hdfs_tools.cpp  parallel.xml  parallel_example.cpp  parallel_examply.py  plan.txt  require.txt
conf/: hdfs.conf  ip.conf  responser.conf  server.conf
include/: SGBasicServer.h  SGComputeClient.h  SGComputeResponser.h  SGComputeServer.h  SGDebug.h  SGHdfsStreamFactory.h  SGMacro.h  SGParallelMachine.h  SGPathUtils.h  SGPiecesCreator.h
include/fs/: SGFile.h
include/pieces/: SGCachePieces.h
pieces/example/: TrBmp_0  TrBmp_1  TrBmp_2  TrBmp_3  TrBmp_4
src/: SGBasicServer.cpp  SGParallelMachine.cpp
src/compute/: ALDynamicBuffer.cpp  ALDynamicBuffer.h  SGBasicServer.cpp  SGCompute.CS.pb-c.c  SGCompute.CS.pb-c.h  SGCompute.CS.proto  SGCompute.SR.pb-c.c  SGCompute.SR.pb-c.h  SGCompute.SR.proto  SGCompute.h  SGComputeCSMessage.cpp  SGComputeClient.cpp  SGComputeResponser.cpp  SGComputeServer.cpp  SGComputeServerByInfo.cpp  SGHandler.cpp  SGHandler.h  SGParallelMachine.cpp  SGPiecesCreator.cpp  SGPiecesCreatorClient.cpp  SGPiecesCreatorClient.h  SGPiecesCreatorServer.h  SGResponserExecutor.cpp  SGResponserExecutor.h  generate.sh
src/fs/: SGHdfsStream.cpp  SGHdfsStream.h  SGHdfsStreamFactory.cpp  SGHdfsWStream.cpp  SGHdfsWStream.h  SGPathUtils.cpp
src/install/: SGInstallClient.h
src/pieces/: SGCachePieces.cpp
test/: GPCreatorClientTest.cpp  GPPathUtilsTest.cpp  GPTest.cpp
third/libhdfs/: libhdfs.a_mac
(+9 files in other folders)
